# SparkEngine

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
include/SparkEngine/: Config.hpp
include/SparkEngine/Core/: Dll.hpp  Export.hpp  Vector2.hpp  Vector2.inl  Window.hpp
include/SparkEngine/Core/Framework/: ApplicationLayer.hpp
include/SparkEngine/Editor/: EditorLayer.hpp  Export.hpp
src/SparkEngine/: CMakeLists.txt
src/SparkEngine/Core/: CMakeLists.txt  Dll.cpp  Vector2.cpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/SparkEngine/Core/Framework/: ApplicationLayer.cpp
src/SparkEngine/Core/Platform/Win32/: DllImplWin32.cpp  DllImplWin32.hpp  WindowImplWin32.cpp  WindowImplWin32.hpp
src/SparkEngine/Editor/: CMakeLists.txt  EditorLayer.cpp
src/SparkEngine/Runtime/: CMakeLists.txt  Main.cpp
